--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,8 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
     color: #404040;
     margin: 0;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 /* =================
@@ -74,15 +76,14 @@ p {
 /* =================
     Intro
    ================= */
-
 .intro { 
     justify-content: space-between;
     min-height: 250px;
     text-align: center;
     color: #fff;
-    background: #9480e4 url("images/intro-bg.png");
     background-size: cover;
     padding-bottom: 1.5em;
+    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('public/rpgc-15th-summer.jpg');    
 }
 
 /* ====================
@@ -96,13 +97,73 @@ p {
 
 .img-main {
     width: 120px;
-    border-radius: 50%;
 }
 
 .main-content p,
 form {
     max-width: 450px;
 }
+
+/* =================
+    Blockquotes
+   ================= */
+ 
+ /* Blockquote main style */
+ .blockquote {
+     position: relative;
+     font-family: 'Montserrat', sans-serif;
+     font-weight: 800;
+     color: #ffffff;
+     padding: 30px 0;
+     width: 100%;
+     max-width: 500px;
+     z-index: 1;
+     margin: 80px auto;
+     align-self: center;
+     border-top: solid 1px;
+     border-bottom: solid 1px;
+ }
+ 
+ /* Blockquote header */
+ .blockquote h1 {
+     position: relative;
+     color: #FFFFFF;
+     font-size: 40px;
+     font-weight: 800;
+     line-height: 1;
+     margin: 0;
+ }
+ 
+ /* Blockquote right double quotes */
+ .blockquote:after {
+     position: absolute;
+     content: "”";
+     color: rgba(255, 255, 255, 1);
+     font-size: 10rem;
+     line-height: 0;
+     bottom: -43px;
+     right: 30px;
+ }
+ 
+ /* increase header size after 600px */
+ @media all and (min-width: 600px) {
+     .blockquote h1 {
+         font-size: 60px;
+    }
+ 
+ }
+ 
+ /* Blockquote subheader */
+ .blockquote h4 {
+     position: relative;
+     color: #ffffff;
+     font-size: 1.4rem;
+     font-weight: normal;
+     line-height: 1;
+     margin: 0;
+     padding-top: 20px;
+     z-index: 1;
+ }
 
 /* =================
     Form
@@ -123,7 +184,7 @@ input {
 
 input:focus {
     outline: none;
-    border-color: #8a71ec;
+    border-color: #081C3C;
     background-color: #e6e8ec;
 }
 
@@ -138,7 +199,7 @@ input:focus {
 
 .btn-primary {
     color: white;
-    background-color: #8a71ec;
+    background-color: #081C3C;
     margin-top: 1em;    
 }
 
