--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,7 @@ p {
     Intro
    ================= */
 .intro { 
+    display:none;
     justify-content: space-between;
     min-height: 250px;
     text-align: center;
@@ -236,6 +237,7 @@ input:focus {
     }
     
     .intro {
+        display: flex;
         min-height: 100vh;
     }
     
